----------------------------
bzr-fastimport Release Notes
----------------------------

.. contents::

IN DEVELOPMENT
--------------

  FEATURES:

  IMPROVEMENTS:

    * Added NEWS containing Release Notes. (Ian Clatworthy)

  BUG FIXES:

    * Support the new Repository API added in bzr.dev r3510. The old API
      will be used for earlier versions of bzr including bzr 1.6beta2 and
      earlier. (Ian Clatworthy)

  COMPATIBILITY BREAKS:

    * The ``--inv-fulltext`` option is not yet supported when the new
      Repository API is used to import revisions. (Ian Clatworthy)

  API BREAKS:

    * The ``RevisionLoader`` class has been renamed to ``RevisionLoader1``.
      The ``ExperimentalRevisionLoader`` class has been renamed to
      ``ImportRevisionLoader1``. New classes called ``RevisionLoader2``
      and ``ImportRevisionLoader2`` are provided that use the new
      Repository API. (Ian Clatworthy)

  TESTING:

  INTERNALS:

    * Improved packaging by adding a setup.py file. (Ian Clatworthy)


0.5 02-Jun-2008
---------------

  FEATURES:

    * Version suitable for Bazaar 1.5.
      (Ian Clatworthy)