@@ -4,7 +4,7 @@ from distutils.core import setup
 bzr_plugin_name = 'fastimport'
 
 bzr_plugin_version = (0, 6, 0, 'dev', 0)
-bzr_minimum_version = (1, 0, 0)
+bzr_minimum_version = (1, 1, 0)
 bzr_maximum_version = None
 
 if __name__ == 'main':
